width added to img tags

--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
     <h2>Our Team</h2>
 <ul>
     <li>
-        <img src="/goit-markup-hw-01/images/Mark.jpg" alt="Mark Guerrero">
+        <img src="/goit-markup-hw-01/images/Mark.jpg" alt="Mark Guerrero" width="264">
         <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
     </li>
     <li>
-        <img src="/goit-markup-hw-01/images/Tom.jpg" alt="Tom Ford">
+        <img src="/goit-markup-hw-01/images/Tom.jpg" alt="Tom Ford" width="264">
         <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
     </li>
     <li>
-        <img src="/goit-markup-hw-01/images/Camilla.jpg" alt="Camila Garcia">
+        <img src="/goit-markup-hw-01/images/Camilla.jpg" alt="Camila Garcia" width="264">
         <h3>Camila Garcia</h3>
         <p>Marketing</p>
     </li>
     <li>
-        <img src="/goit-markup-hw-01/images/Daniel.jpg" alt="Daniel Wilson">
+        <img src="/goit-markup-hw-01/images/Daniel.jpg" alt="Daniel Wilson" width="264">
         <h3>Daniel Wilson</h3>
         <p>UI Designer</p>
     </li>
