--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
       
     </header>
-</body>
+<main>
 <section>
     <h1>Effective Solutions for Your Business</h1>
     <button type="button">Order Service</button>
@@ -84,8 +84,10 @@
     </li>
 </ul>
 </section>
+</main>
 <footer>
     <a href="/">Logo</a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
+</body>
 </html>
